kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://flux-operator.exelent.click"
    gethomepage.dev/icon: flux.png
    gethomepage.dev/name: Flux Operator
    gethomepage.dev/group: "Monitoring & Observability"
    gethomepage.dev/description: GitOps reconciliation UI
    gethomepage.dev/weight: "80"
spec:
  hostnames:
    - flux-operator.exelent.click
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
